package(default_visibility = ["//visibility:public"])

# See //src/common/BUILD.bazel for an explanation of how include resolution
# is configured: this library inherits the `-Isrc/` -I path from
# //src/common, so source files can use `#include "common/..."`,
# `#include "upgrade/..."` etc. transparently.

cc_library(
    name = "upgrade",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    copts = select({
        "@platforms//os:windows": [],
        "//conditions:default": [
            "-std=c++17",
            "-pthread",
        ],
    }),
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["-pthread"],
    }),
    deps = [
        "//include:public_headers",
        "//src/common:common",
        "//third/boringssl:crypto",
        "//third/boringssl:ssl",
    ],
)
